# Torii-SUMO

./: .gitignore  .zenodo.json  CITATION.cff  LICENSE  LICENSE-CODE  LICENSE-DOCS  NOTICE.md  README.de.md  README.md  README.zh-CN.md  pyproject.toml
.agents/plugins/: marketplace.json
.github/workflows/: create-release.yml
docs/: codex-plugin-install.md  common-sumo-signal-control-failures.md  index.html  mcp-host-config.md  osm-source-patterns.md  robots.txt  sitemap.xml  skill-integration.md
docs/assets/: README.md
docs/release/: conference-positioning.md  github-topics.txt  linkedin-posts.md  mailing-list-announcement.md  public-repo-manifest.md
examples/01_fixed_time_audit/: expected_audit_report.md  task.md
examples/01_signal_control_audit/: README.md  task.md
examples/02_max_pressure_audit/: task.md
examples/02_one_prompt_osm_network/: README.md  manifest.public.json  prompt.md
examples/03_data_informed_signal_control_audit/: expected_audit_report.md  task.md
tests/: test_bundled_sumo_skill.py  test_command_runner.py  test_config_preflight.py  test_detector_demand_tools.py  test_docs_plugin_install.py  test_environment.py  test_evidence_bundle.py  test_imports.py  test_junction_aggregation.py  test_mcp_tools.py  test_minimal_smoke.py  test_network_plan.py  test_osm_network_tools.py  test_output_inspection.py  test_plugin_packaging.py  test_reference_hierarchy.py  test_reference_join_audit.py  test_reference_scope.py  test_road_corridor.py  test_routeability_audit.py  test_tls_aggregation.py  test_workflow_review_html.py  test_workflow_router.py
(+173 files in other folders)
